--- a/serverless.yml
+++ b/serverless.yml
@@ -1,8 +1,9 @@
-service: websockets-chat 
+service: websockets-chat-vitalizinkevich
 
 provider:
   name: aws
-  runtime: nodejs8.10
+  runtime: nodejs12.x
+  profile: default
 
   iamRoleStatements:
     - Effect: Allow
@@ -44,10 +45,10 @@ resources:
       Type: "AWS::DynamoDB::Table"
       Properties:
         AttributeDefinitions:
-        - AttributeName: "connectionId"
-          AttributeType: "S"
+          - AttributeName: "connectionId"
+            AttributeType: "S"
         KeySchema:
-        - AttributeName: "connectionId"
-          KeyType: "HASH"
+          - AttributeName: "connectionId"
+            KeyType: "HASH"
         BillingMode: PAY_PER_REQUEST
         TableName: chatIdTable
