--- a/serverless.yml
+++ b/serverless.yml
@@ -19,7 +19,11 @@ provider:
         - "execute-api:ManageConnections"
       Resource:
         - "arn:aws:execute-api:*:*:**/@connections/*"
-
+    - Effect: Allow
+      Action:
+        - "ses:SendEmail"
+        - "ses:SendRawEmail"
+      Resource: "*"
 functions:
   connectionHandler:
     handler: handler.connectionHandler
